🎨 Add typography and color palette; update ESLint packages

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+@import "./fonts.css";
+@import "./variables.css";
+
+
+@layer base {
+    html {
+        @apply font-manrope
+    }
+}
