--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -35,12 +35,7 @@
     --color-gray-99: #FCFCFD;
 }
 
-@custom-variant tablet {
-    @media (width > 1024px) {
-        @slot;
-    }
-}
-
+/* Breakpoints */
 @custom-variant laptop {
     @media (width > 1440px) {
         @slot;
