--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,49 +1,49 @@
-@import "tailwindcss";
-
+@import 'tailwindcss';
 
 @theme {
+  /* Fonts */
+  --font-manrope:
+    'manrope', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, sans-serif;
 
-    /* Fonts */
-    --font-manrope: "manrope", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  /* Red Shades */
+  --color-red-45: #e50000;
+  --color-red-50: #ff0000;
+  --color-red-55: #ff1919;
+  --color-red-80: #ff9999;
+  --color-red-95: #ffe5e5;
+  --color-red-90: #ffcccc;
 
-    /* Red Shades */
-    --color-red-45: #E50000;
-    --color-red-50: #FF0000;
-    --color-red-55: #FF1919;
-    --color-red-80: #FF9999;
-    --color-red-95: #FFE5E5;
-    --color-red-90: #FFCCCC;
+  /* Black Shades */
+  --color-black-06: #0f0f0f;
+  --color-black-08: #141414;
+  --color-black-10: #1a1a1a;
+  --color-black-12: #1f1f1f;
+  --color-black-15: #262626;
+  --color-black-20: #333333;
+  --color-black-25: #404040;
+  --color-black-30: #4c4c4c;
 
-    /* Black Shades */
-    --color-black-06: #0F0F0F;
-    --color-black-08: #141414;
-    --color-black-10: #1A1A1A;
-    --color-black-12: #1F1F1F;
-    --color-black-15: #262626;
-    --color-black-20: #333333;
-    --color-black-25: #404040;
-    --color-black-30: #4C4C4C;
-
-    /* Grey Shades */
-    --color-gray-60: #999999;
-    --color-gray-65: #A6A6A6;
-    --color-gray-70: #B3B3B3;
-    --color-gray-75: #BFBFBF;
-    --color-gray-90: #E4E4E7;
-    --color-gray-95: #F1F1F3;
-    --color-gray-97: #F7F7F8;
-    --color-gray-99: #FCFCFD;
+  /* Grey Shades */
+  --color-gray-60: #999999;
+  --color-gray-65: #a6a6a6;
+  --color-gray-70: #b3b3b3;
+  --color-gray-75: #bfbfbf;
+  --color-gray-90: #e4e4e7;
+  --color-gray-95: #f1f1f3;
+  --color-gray-97: #f7f7f8;
+  --color-gray-99: #fcfcfd;
 }
 
 /* Breakpoints */
 @custom-variant laptop {
-    @media (width > 1440px) {
-        @slot;
-    }
+  @media (width > 1440px) {
+    @slot;
+  }
 }
 
 @custom-variant desktop {
-    @media (width > 1920px) {
-        @slot;
-    }
+  @media (width > 1920px) {
+    @slot;
+  }
 }
