✨ Add Pricing section and  rename container class due to conflict with TailwindCSS  classes.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,7 +24,7 @@
     @apply bg-red-45 desktop:py-4.5 flex items-center justify-center gap-1 rounded-lg px-6 py-3.5 text-white;
   }
 
-  .container {
-    @apply laptop:px-20 desktop:px-40.5 mx-auto px-4;
+  .safe-area {
+    @apply laptop:px-20 desktop:px-40.5 px-4;
   }
 }
