✨ Improved styles and added CTA to the home page

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,6 +9,10 @@
   html {
     @apply font-manrope bg-black-08 text-white;
   }
+
+  button {
+    @apply cursor-pointer;
+  }
 }
 
 @layer components {
