--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,7 +25,7 @@
   }
 
   .button {
-    @apply bg-red-45 desktop:py-4.5 flex items-center justify-center gap-1 rounded-lg px-6 py-3.5 text-white;
+    @apply bg-red-45 desktop:py-4.5 desktop:text-lg flex items-center justify-center gap-1 rounded-lg px-6 py-3.5 text-sm font-semibold text-white;
   }
 
   .safe-area {
